[package]
name = "arbitrage"
version = "0.1.0"
edition = "2024"
dependencies = "A development framework focused on arbitrage."

[dependencies]
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
env_logger = "0.11.8"
log = "0.4.19"
hyperliquid_rust_sdk = "0.6.0"
alloy = "1.0.36"
eyre = "0.6.12"
