[package]
name = "arbitrage"
version = "0.1.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "Focus on the comprehensive development framework of financial arbitrage trading and quantitative trading."
keywords = [
    "solana",
    "ethereum",
    "evm",
    "finance",
    "crypto",
    "trade",
    "arbitrage",
    "quantify",
    "blockchain",
]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/arbitrage"

[dependencies]
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
env_logger = "0.11.8"
log = "0.4.19"
hyperliquid_rust_sdk = "0.6.0"
alloy = "1.0.36"
eyre = "0.6.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
solana-client = "2.2.7"
solana-transaction-status = "2.2.7"
solana-sdk = "2.2.2"